<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/ContentBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/tab_bar_background"
        android:weightSum="1.0" >

		<ImageButton
            android:id="@+id/CommentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight=".33"
            android:background="@drawable/button_selector"
            android:src="@drawable/social_chat"
            android:contentDescription="@string/CommentButtonDescription"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:onClick="viewComments"/>

        <ImageButton
            android:id="@+id/PhotoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight=".33"
            android:background="@drawable/button_selector"
            android:src="@drawable/content_picture"
            android:contentDescription="@string/PhotoButtonDescription"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <ImageButton
            android:id="@+id/AudioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight=".33"
            android:background="@drawable/button_selector"
            android:src="@drawable/device_access_mic"
            android:contentDescription="@string/AudioButtonDescription"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/TaskNameHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ContentBar"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/TaskNameHeaderLabel" />

    <TextView
        android:id="@+id/TaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TaskNameHeader"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/TaskDescriptionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TaskName"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/TaskDescriptionHeaderLabel" />

    <TextView
        android:id="@+id/TaskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TaskDescriptionHeader"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/TaskRequirementsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TaskDescription"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/TaskRequirementsHeaderLabel" />

    <TextView
        android:id="@+id/TaskRequirements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TaskRequirementsHeader"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp" />
    

    <TextView
        android:id="@+id/PhotoGalleryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/TaskRequirements"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/PhotoGalleryHeaderLabel" />

    <TextView
        android:id="@+id/AudioGalleryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/PhotoGalleryHeader"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/AudioGalleryHeaderLabel" />

    <LinearLayout
        android:id="@+id/Bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tab_bar_background"
        android:weightSum="1.0" >

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33" />

        <Button
            android:id="@+id/CloseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight=".33"
            android:background="@drawable/button_selector"
            android:onClick="close"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/CloseButtonLabel"
            android:textColor="#ffffffff" />
    </LinearLayout>

</RelativeLayout>