<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/UserInfoViewDetials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:text="@string/UserInfoDetials"/>
    
    <TextView
        android:id="@+id/UserNameErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserInfoViewDetials"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textColor="#ffff0000"
     	/>
    
    <TextView
        android:id="@+id/UserNameHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserNameErrorMessage"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/UserNameHeaderLabel" />

    <EditText
        android:id="@+id/EditUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserNameHeader"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:hint="@string/EditUserNameHint"
        android:inputType="text"
        android:maxLines="1" >

        <requestFocus />
    </EditText>
    
    <LinearLayout
         android:id="@+id/Bar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/tab_bar_background"
         android:weightSum="1.0" >
        
        <Button
            android:id="@+id/ClearDataButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight=".33"
            android:background="@drawable/button_selector"
            android:onClick="deleteLocalData"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/ClearDataButtonLabel"
            android:textColor="#ffffffff" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33" />

        <Button
            android:id="@+id/SubmitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight=".33"
            android:background="@drawable/button_selector"
            android:onClick="newUser"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/NextButtonLabel"
            android:textColor="#ffffffff" />
    </LinearLayout>

</RelativeLayout>
