<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ViewImageMain" >

    <ImageView
        android:id="@+id/TaskImageView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/ImageGallery"
        android:layout_centerHorizontal="true"
        android:background="@drawable/image_bg"
        android:contentDescription="@string/GalleryImageViewDescription" />

    <Gallery
        android:id="@+id/ImageGallery"
        android:layout_width="fill_parent"
        android:layout_height="128dp"
        android:layout_above="@+id/Bar"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/Bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tab_bar_background"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/TakePictureButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight=".33"
            android:background="@drawable/button_selector"
            android:onClick="takePhoto"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/TakePictureButtonLabel"
            android:textColor="#ffffffff" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".33" />

        <Button
            android:id="@+id/CloseButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight=".33"
            android:background="@drawable/button_selector"
            android:onClick="close"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/CloseButtonLabel"
            android:textColor="#ffffffff" />
    </LinearLayout>

</RelativeLayout>